# postgres_crud_generator

./: .bumpversion.cfg  .coveragerc  .gitignore  .travis.yml  README.md  README.rst  flit.ini  gencrud.py  pg_crud_gen.py  pyproject.toml  pytest.ini  requirements-test.txt
pgtools/: __init__.py  types.py
tests/: conftest.py  test_db.py  test_main.py  util.py
